--- a/css/style.css
+++ b/css/style.css
@@ -19,7 +19,7 @@ li {
   margin-left: 20px;
 }
 
-p, address { 
+p, address {
   font-size: 1em; /* 16px, ?pt, 100%, 1em */
   line-height: 1.5em;
 }
@@ -160,7 +160,7 @@ img, video, audio, iframe, table, form {
 /*/////// LAYOUT ////////*/
 
 .wrapper {
-  width: 960px;
+  max-width: 960px;
   margin: 0 auto;
 }
 
@@ -264,6 +264,38 @@ header {
   font: 1em "Trebuchet MS", Arial, sans-serif;
 }
 
+@media screen and (max-width: 980px) {
+  #navbar, nav {
+    width: 100%;
+    position: static;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+  }
+
+  #navbar nav a {
+    width: 100%;
+    display: block;
+  }
+
+  #navbar .wrapper {
+    margin: 0 0;
+  }
+
+  #featured-property p {
+    column-count: 1;
+  }
+
+  #promotional {
+    float: none;
+    width: 100%;
+  }
+  #news {
+    float: none;
+    width: 100%;
+  }
+}
+
 #navbar nav a.selected {
   background: #333;
   color: white;
@@ -347,11 +379,11 @@ section {
 /*////////// FOOTER //////////*/
 
 footer {
-  text-align: center; 
+  text-align: center;
   font-size: 0.75em;
   padding: 10px;
   background: #eee;
-  border-top: 1px solid; 
+  border-top: 1px solid;
 }
 
 
